# SDL3-dist

./: .gitignore  CMakeLists.txt  README.md
lib/apple-clang-arm64/shared/release/: libSDL3.1.0.0.dylib
lib/win32-x64/shared/release/: SDL3.exp  SDL3.lib
